--- a/src/components/carou/carou.css
+++ b/src/components/carou/carou.css
@@ -32,6 +32,11 @@ div .carousel-caption h3 {
     right: 0;
     bottom: 0;
     left: 0;
-    box-shadow: 0px 0px 30px 70px #fce5be inset;
+    box-shadow: 0px 0px 3vmin 4vmin #fce5be inset;
 }
+
+.carousel {
+    width: 100%;
+    margin: auto;
+  }
 
