--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,12 +1,19 @@
 .contact-div {
     font-family: 'Playtime';
     color: #8F8476;
-    font-size: 1.4vw;
+    font-size: 1.4rem;
     text-align: justify;
     text-justify: inter-word;
     justify-items: center;
     margin-left: 3vw;
 }
+
+@media (max-width: 800px) {
+    .contact-div{
+        font-size: 1.2rem;
+    }
+}
+
 
 .flex-box-button {
     display:flex;
@@ -14,4 +21,13 @@
     justify-content: space-evenly;
     width: 50%;
     margin-top: 3vh;
+}
+
+@media (max-width: 1000px) {
+    .flex-box-button {
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
 }
