--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -18,11 +18,56 @@
     padding-top: 2vh;
 }
 
+@media (max-width: 1000px) {
+    .grid-container {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-gap: 20px;
+    }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 25% 75%;
-    grid-gap: 20px;
+    .grid-container-2 {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-gap: 20px;
+        justify-items: center;
+        margin-top: 5vh;
+        padding-left: 2vw;
+    }
+
+    .grid-container-3 {
+        margin-top: 5vh;
+        margin-left: 3vw;
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-gap: 20px;
+        margin-bottom: 5vh;
+    }
+}
+
+@media (min-width: 1000px)  {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 25% 75%;
+        grid-gap: 20px;
+    }
+
+    .grid-container-2 {
+        display: grid;
+        grid-template-columns: 45% 42%;
+        grid-gap: 20px;
+        justify-items: center;
+        margin-top: 5vh;
+        padding-left: 2vw;
+    }
+
+    .grid-container-3 {
+        margin-top: 5vh;
+        margin-left: 3vw;
+        display: grid;
+        grid-template-columns: 50% 40%;
+        grid-gap: 20px;
+        margin-bottom: 5vh;
+    }
 }
 
 .grid-carou {
@@ -30,6 +75,10 @@
     justify-content: center;
     align-items: center;
     padding-top: 2vh;
+}
+
+.button-list {
+    margin-top: 2vh;
 }
 
 #scrollAbout, #scrollDownload, #scrollSupport{
@@ -56,31 +105,19 @@
 #saki-image {
     width: 83%;
     box-shadow: -1.3vw 1.3vw 0.5vw 0.25vw #8F8476;
+    display: block;
 }
 
 .image-div {
     display: flex;
-    margin-left: 3vw;
-    align-items: flex-end;
+    margin-right: 4vw;
+    align-items: center;
+    justify-content: center;
 }
 
-.grid-container-2 {
-    display: grid;
-    grid-template-columns: 45% 42%;
-    grid-gap: 20px;
-    justify-items: center;
-    margin-top: 5vh;
-    padding-left: 2vw;
-}
 
-.grid-container-3 {
-    margin-top: 5vh;
-    margin-left: 3vw;
-    display: grid;
-    grid-template-columns: 50% 40%;
-    grid-gap: 20px;
-    margin-bottom: 5vh;
-}
+
+
 
 .limit-length {
     width: 15%;
