--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -18,6 +18,27 @@
     padding-top: 2vh;
 }
 
+#scrollAbout, #scrollDownload, #scrollSupport{
+    font-family: "Playtime Bold", serif;
+    color: #8F8476;
+    font-size: 2.5rem;
+    border-bottom: 4px solid #8F8476;
+    padding: 1vh;
+    margin-top: 100px;
+    display: inline-block;
+}
+
+#scrollContact {
+    font-family: "Playtime Bold", serif;
+    color: #8F8476;
+    font-size: 2.5rem;
+    border-bottom: 4px solid #8F8476;
+    padding: 1vh;
+    margin-top: 100px;
+    display: inline-block;
+    margin-left: 3vw;
+}
+
 @media (max-width: 1000px) {
     .grid-container {
         display: grid;
@@ -30,7 +51,7 @@
         grid-template-rows: auto auto;
         grid-gap: 20px;
         justify-items: center;
-        margin-top: 5vh;
+        margin-top: 23vh;
         padding-left: 2vw;
     }
 
@@ -56,7 +77,7 @@
         grid-template-columns: 45% 42%;
         grid-gap: 20px;
         justify-items: center;
-        margin-top: 5vh;
+        margin-top: 23vh;
         padding-left: 2vw;
     }
 
@@ -67,6 +88,10 @@
         grid-template-columns: 50% 40%;
         grid-gap: 20px;
         margin-bottom: 5vh;
+    }
+
+    #scrollAbout, #scrollDownload, #scrollSupport, #scrollContact {
+        font-size: 3.7rem;
     }
 }
 
@@ -79,27 +104,6 @@
 
 .button-list {
     margin-top: 2vh;
-}
-
-#scrollAbout, #scrollDownload, #scrollSupport{
-    font-family: "Playtime Bold", serif;
-    color: #8F8476;
-    font-size: 3vw;
-    border-bottom: 4px solid #8F8476;
-    padding: 1vh;
-    margin-top: 100px;
-    display: inline-block;
-}
-
-#scrollContact {
-    font-family: "Playtime Bold", serif;
-    color: #8F8476;
-    font-size: 3vw;
-    border-bottom: 4px solid #8F8476;
-    padding: 1vh;
-    margin-top: 100px;
-    display: inline-block;
-    margin-left: 3vw;
 }
 
 #saki-image {
