--- a/src/components/download/download.css
+++ b/src/components/download/download.css
@@ -7,7 +7,7 @@
     font-family: 'Playtime';
     color: #8F8476;
     font-size: 1.4rem;
-    text-align: justify;
+    text-align: left;
     text-justify: inter-word;
     justify-items: center;
 
