--- a/src/components/bonus/bonus.css
+++ b/src/components/bonus/bonus.css
@@ -17,7 +17,7 @@
 .flex-box-button-2 {
     display:flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     width: 50%;
     margin-top: 3vh;
 }
