--- a/src/components/bonus/bonus.css
+++ b/src/components/bonus/bonus.css
@@ -15,18 +15,16 @@
 }
 
 .flex-box-button-2 {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 50%;
-    margin-top: 3vh;
+    display: grid;
+    grid-template-columns: 25% 75%;
+    grid-gap: 2vmax;
+
 }
+
 
 @media (max-width: 1000px) {
     .flex-box-button-2 {
-        flex-direction: column;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
+        grid-template-columns: 100%;
+        grid-gap: 3vmax;
     }
 }
